# pydantic-ai-playground

./: .env.example  .pre-commit-config.yaml  README.md  agent_delegation_deps.py  agent_delegation_simple.py  box_or_error.py  capital.py  conversation.py  dice_game.py  dice_game_tool_kwarg.py  hello.py  joke_app.py  model_errors.py  olympics.py  programmatic_handoff.py  pyproject.toml  roulette_agent.py  single_parameter_tool.py  system_prompts.py  text-format.py  tool_schema.py  unused_dependencies.py
.github/workflows/: ci.yml
